Fix Analyzer tests